<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.luf.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.luf.ui.maps.MapsFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/nav_contacts"
        android:name="com.example.luf.ui.contacts.ContactsFragment"
        android:label="@string/menu_contacts"
        tools:layout="@layout/fragment_contacts" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.luf.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_chat"
        android:name="com.example.luf.ui.chat.ChatFragment"
        android:label="@string/menu_chat"
        tools:layout="@layout/activity_chat" />
</navigation>