<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/menu_home"

            />
        <item
            android:id="@+id/nav_map"
            android:icon="@android:drawable/ic_menu_mapmode"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/menu_contacts" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_menu_send"
            android:title="Chat" />
    </group>
</menu>